devops/01-pod.yaml
apiVersion: v1
kind: Namespace 
metadata:
  name: frontend-ns
  labels: 
    namespace: frontend

---
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  namespace: frontend 
spec:
  containers: 
    - name: nginx
      image: docker.io/nginx
