devops/02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-02
spec: 
  containers:
    - name: nginx
      image: docker.io/nginx
    - name: Mongo
      image: docker.io/mongo
