devops/04-fail-container.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: sleep
spec: 
  containers:
    - name: redhat-micro
      image: redhat/ubi9-micro:latest

# it will fail it has noting just os 
# testing kubernetes restrt the pod on failure
