devops/05-deployment.yaml
apiVersion: v1 
kind: Namespace
metadata: 
  name: deployment-ns
  labels: 
     namespace: deployment-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-01
  namespace: deployment-ns
  labels:
     app: nginx-deploy
  # annotations:
  #    controller.kubernetes.io/pod-deletion-cost: "10"
spec: # spec of replica set
  replicas: 1
  selector: 
    matchLabels: 
     app: nginx-deploy
  template: #pod template
    metadata:
      labels:
        app: nginx-deploy
    spec:  # spec for container
     containers:
      - name: nginx
        image: docker.io/nginx # change to 1.24 after deployment
