devops/13-secret.yaml
apiVersion: v1 
kind: Pod
metadata: 
  name: pod-07-secret
spec: 
  containers:
    - name: debug
      image: docker.io/rkalluru/debug
