devops/14-resource-management.yaml
apiVersion: v1 
kind: Pod
metadata: 
  name: pod-09-resource
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
      resources: 
        requests:
          memory: "64Mi"
          cpu: "50m"
        limits: 
          memory: "128Mi"
          cpu: "100m" # 1 cpu = 100 millicore kubectl top command
