devops/15-rbac-service-account.yaml
---
apiVersion: v1 
kind: Pod
metadata: 
  name: debug
  namespace: default
spec: 
  serviceAccountName: debug
  containers:
    - name: debug
      image: docker.io/rkalluru/debug
