devops/17-security-context.yaml
apiVersion: v1 
kind: Pod
metadata: 
  name: nginx
  labels: 
    appType: nginx
spec: 
  securityContext: 
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
    - name: nginx 
      image: docker.io/nginx
