devops/18-pod-security.yaml
#standard
apiVersion: v1 
kind: Namespace 
metadata: 
  name: psa-pss-test-ns
  labels: 
    pod-security.kubernetes.io/enforce: privileged # baseline #restrcited
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged

--- #2
# apiVersion: apps/v1
# kind: Development
# metadata: 
#   name: deploy-01
#   namespace: psa-pss-test-ns
#   labels: 
#     app: nginx 
# spec: 
#   replicas: 1
#   selector: 
#     matchLabels: 
#        app: nginx
#   template: 
#     metadata: 
#       labels: 
#         app:  nginx 

#     spec: 
#       containers: 
#         - name: nginx
#           image: docker.io/nginx
--- #1
apiVersion: v1 
kind: Pod
metadata: 
  name: nginx 
  namespace: psa-pss-test-ns
spec: 
  containers: 
     - name: nginx 
       image: docker.io/nginx
       ports: 
         - contianerPort: 80
           hostPort: 32000


#
