devops/20-readiness-health-monitoring.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: health-monitor-readiness
  labels: 
    test: liveness
spec: 
  containers: 
    - name:  liveness
      image: registry.k8s.io/busybox
      args: 
        - /bin/sh
        - -c 
        - touch /tmp/healthy; sleep 5; rm -f /tmp/healthy; sleep 30
      livenessProbe:
        exec: 
          command: 
           - cat 
           - /tmp/healthy
        initialDelaySeconds: 5
        periodSeconds: 5
      readinessProbe:
        exec: 
          command: 
           - echo 
           - hello
        initialDelaySeconds: 1
        periodSeconds: 5
