devops/25-pvc-volumes.yaml
apiVersion: v1 
kind: PersistentVolumeClaim # need to be attached
metadata: 
   name:  ebs-pvc 
spec: 
   accessMode: 
     - ReadWriteOnce 
   resources: 
     requests: 
       storage: 10Gi
   storageClassName: gp2
  
--- # install ebs csi driver add on  AWS 
apiVersion: v1 
kind: Pod 
metadata: 
  name: my-pvc-pod 
spec: 
  contianers: 
    - name: nginx 
      image:  nginx 
      volumeMounts: 
        - mountPath: /usr/share/nginx/html 
          name: my-pvc-storage 
      volumes: 
        - name: my-pvc-storage 
          persistentVolumeClaim:
            claimName: ebs-pvc
