devops/07-service.yml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-06
  labels: # this we use to tag to other service
    appName: nginx
    example: service
spec: 
  containers:
      - name: nginx
        image: docker.io/nginx

---
apiVersion: apps/v1
kind: Service
metadata:
  name: nginx-06
spec:
  selector:
    appName: nginx
    example: service
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80 #can opn mutiple ports for different continer in same service
