devops/19-kubeaudit-fix.yaml
#github.com/Shopify/kubeaudit
# move kubeudit to /usr/bin
#kubeaudit all -n namespace-name
# misssing default ingress,egress policy
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: block-all-network
  namespace: default
spec: 
  policyTypes: 
    - Ingress 
    - Egress
